--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google" content="notranslate" />
+    <meta name="google" content="notranslate">
     <title>Bitcoin</title>
     <script>
-      const SLIDES = 1;
+      const SLIDES = 35;
       let current = parseInt(window.location.hash.substring(1)) || 0;
       window.location.hash = current;
       document.addEventListener("keydown", function(event) {
@@ -56,6 +56,30 @@
         font-size: 200%;
       }
 
+      h1 {
+        font-size: 2.0rem;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      h3 {
+        font-size: 1.3rem;
+      }
+
+      h4 {
+        font-size: 1.0rem;
+      }
+
+      h5 {
+        font-size: 0.8rem;
+      }
+
+      h6 {
+        font-size: 0.7rem;
+      }
+
       section {
         background-color: black;
         padding-left: 2em;
@@ -78,69 +102,43 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <section id="0"><h1>Bitcoin</h1>
-<p>bitcoin-presentation</p>
-<h1>Feel free to interrupt and ask questions!</h1>
-<p>Your questions are more important than anything I have to say.</p>
-<p>If you have a question, other people probably have it too.</p>
-<ul>
-<li>
-<p>Explain what is bitcoin</p>
-<ul>
-<li>Open financial system</li>
-</ul>
-</li>
-<li>
-<p>you can buy a fraction of a bitcoin</p>
-</li>
-<li>
-<p>The US dollar is fake</p>
-</li>
-<li>
-<p>fixed amount of bitcoin</p>
-</li>
-<li>
-<p>Nobody can stop you</p>
-</li>
-<li>
-<p>You can use it directly</p>
-</li>
-<li>
-<p>Inflation benefits those with asset</p>
-</li>
-<li>
-<p>Declining purchasing power of minimum wage</p>
-</li>
-<li>
-<p>Basics: blocks, transactions, addresses?</p>
-</li>
-<li>
-<p>Banking has trusted intermediaries</p>
-</li>
-<li>
-<p>Miners process transactions</p>
-</li>
-<li>
-<p>What backs a dollar?</p>
-</li>
-<li>
-<p>Common misconceptions</p>
-</li>
-<li>
-<p>Other projects understimate risk</p>
-</li>
-<li>
-<p>Ask questions! Interrupt!</p>
-</li>
-<li>
-<p>How much does a candy bar cost?</p>
-</li>
-<li>
-<p>Inflation benefits asset holders</p>
-</li>
-<li>
-<p>Who wants to buy a house? Getting more and more expensive</p>
-</li>
+    <section id="0"><h1>Bitcoin</h1></section>
+    <section id="1"><h2>Feel free to interrupt and ask questions!</h2></section>
+    <section id="2"><ul>
+<li>Your questions are more important than anything I have to say.</li>
+<li>If you have a question, other people probably have it too.</li>
 </ul></section>
+    <section id="3"><p>Bitcoin is a currency.</p></section>
+    <section id="4"><p>You can save it, you can spend it.</p></section>
+    <section id="5"><p>Bitcoin was created in 2009 by an anonymous programmer who called himself Satoshi Nakamoto.</p></section>
+    <section id="6"><p>Satoshi disappeared, but bitcoin keeps working just fine.</p></section>
+    <section id="7"><p>With bitcoin, there is nobody standing between you and your money.</p></section>
+    <section id="8"><p>If you have dollars in a back, you don’t have control of those dollars.</p></section>
+    <section id="9"><p>You must ask the bank to give you the dollars back, or to send them to someone else.</p></section>
+    <section id="10"><p>Bitcoin doesn’t work that way. If you have bitcoin, you can save it or send it to someone else. You don’t need to ask permission and nobody can stop you.</p></section>
+    <section id="11"><p>Bitcoin cannot be inflated.</p></section>
+    <section id="12"><p>What is inflation? What backs the US dollar?</p></section>
+    <section id="13"><p>Inflation is when the number of dollars goes up, and each dollar buys less.</p></section>
+    <section id="14"><img src="dollar.webp"></section>
+    <section id="15"><p>What is the price of a candy bar?</p></section>
+    <section id="16"><p>When I was a kid, it was 50¢.</p></section>
+    <section id="17"><p>Bitcoin’s current inflation is 1.72% per year, and will go down to 0.2% per year by 2033.</p></section>
+    <section id="18"><p>The dollar is currently inflating at 9% per year, and is <strong>designed</strong> to inflate by at least 2% per year, forever.</p></section>
+    <section id="19"><p>Inflation benefits people with assets, like houses, stocks, and businesses.</p></section>
+    <section id="20"><p>They are protected from inflation, because their assets retain their value when more dollars are printed.</p></section>
+    <section id="21"><p>Inflation hurts people who don’t have assets. If you make $15 an hour, next year, those $15 will buy less than they did the year before.</p></section>
+    <section id="22"><p>If you want to buy a house, that house will cost more and more dollars as dollars become less and less valuable due to inflation.</p></section>
+    <section id="23"><p>Bitcoin is software.</p></section>
+    <section id="24"><p>It runs on computers, like this one.</p></section>
+    <section id="25"><p>This computer is connected to many other computers running the same software.</p></section>
+    <section id="26"><p>Together, they are the Bitcoin network, which processes Bitcoin transactions.</p></section>
+    <section id="27"><p>What is a transaction?</p></section>
+    <section id="28"><p>A transaction is someone sending bitcoin to someone else.</p></section>
+    <section id="29"><p>All the computers in the network together make sure that the owner of the bitcoin authorized the transaction.</p></section>
+    <section id="30"><p>Miners collect transactions together and publish them as blocks, which are really just big groups of transactions.</p></section>
+    <section id="31"><p><a href="https://mempool.space">mempool.space</a></p></section>
+    <section id="32"><p>One bitcoin is currently worth $23,000, but you can buy part of a bitcoin, for example $10 worth.</p></section>
+    <section id="33"><p>Who wants some bitcoin?</p></section>
+    <section id="34"><p>Download “Wallet of Satoshi” on the app store and I’ll give you some.</p></section>
   </body>
 </html>
