--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google" content="notranslate">
     <title>Bitcoin</title>
+    <link rel="icon" href="favicon.ico">
     <script>
       const SLIDES = 35;
       let current = parseInt(window.location.hash.substring(1)) || 0;
